# asm_experiments

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md
FPMath/: CMakeLists.txt
FPMath/common/: CMakeLists.txt
FPMath/common/src/: main.c
FPMath/i386/: .gdbinit
FPMath/i386/src/: float_to_int_sse.c  float_to_int_x87.c  int_to_float_sse.c  int_to_float_x87.c  log2.c  main.c
FPMath/x86_64/: CMakeLists.txt
FPMath/x86_64/src/: float_to_int_x87.c  float_x86_64.h  int_to_float_x87.c  main.c
HelloWorldAsm/: CMakeLists.txt  README.md  notes.txt
HelloWorldAsm/i386/: CMakeLists.txt  Makefile  notes.md
HelloWorldAsm/i386/src/: hw.asm  main.c  notes.md  syscall.c  write.c
HelloWorldAsm/x86_64/: .gdbinit  CMakeLists.txt
HelloWorldAsm/x86_64/src/: asm.h  hw1.asm  hw3.asm  main.c  strlen.asm  strlen2.asm  syscall.c  write.c
SysCall/: CMakeLists.txt
SysCall/i386/: CMakeLists.txt
SysCall/i386/src/: main.c
SysCall/x86_64/: CMakeLists.txt
SysCall/x86_64/src/: asm.h  libc_read.c  syscall.c
math/: CMakeLists.txt
math/i386/: CMakeLists.txt
math/i386/src/: float_to_int_x87.c  int_to_float_x87.c  log2.c  main.c
math/x86_64/: CMakeLists.txt
resources/: Function_Calls_in_x86.md
